--- a/src/closestversor3Dtransform/CMakeLists.txt
+++ b/src/closestversor3Dtransform/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxclosestversor3Dtransform closestversor3Dtransform.cxx )
 
-TARGET_LINK_LIBRARIES( pxclosestversor3Dtransform pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxclosestversor3Dtransform ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxclosestversor3Dtransform
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
