--- a/src/createsphere/CMakeLists.txt
+++ b/src/createsphere/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxcreatesphere createsphere.cxx )
 
-TARGET_LINK_LIBRARIES( pxcreatesphere pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxcreatesphere ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcreatesphere
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
