--- a/src/extracteveryotherslice/CMakeLists.txt
+++ b/src/extracteveryotherslice/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxextracteveryotherslice extracteveryotherslice.cxx )
 
-TARGET_LINK_LIBRARIES( pxextracteveryotherslice pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxextracteveryotherslice ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxextracteveryotherslice
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
