--- a/src/extractslice/CMakeLists.txt
+++ b/src/extractslice/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxextractslice extractslice.cxx )
 
-TARGET_LINK_LIBRARIES( pxextractslice pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxextractslice ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxextractslice
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
