--- a/src/getDICOMseriesUIDs/CMakeLists.txt
+++ b/src/getDICOMseriesUIDs/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxgetDICOMseriesUIDs getDICOMseriesUIDs.cxx )
 
-TARGET_LINK_LIBRARIES( pxgetDICOMseriesUIDs pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxgetDICOMseriesUIDs ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxgetDICOMseriesUIDs
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
