--- a/src/ttest/CMakeLists.txt
+++ b/src/ttest/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxttest ttest.cxx )
 
-TARGET_LINK_LIBRARIES( pxttest pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxttest ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxttest
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
