--- a/src/createbox/CMakeLists.txt
+++ b/src/createbox/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxcreatebox createbox.cxx itkBoxSpatialFunction.txx itkBoxSpatialFunction.h )
 
-TARGET_LINK_LIBRARIES( pxcreatebox pxcommon ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( pxcreatebox ITKTools-Common ${ITK_LIBRARIES} )
 
 INSTALL( TARGETS pxcreatebox
   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
