ENH: Allow imagestovectorimage to work with input images with more than 1 component

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,7 @@ SUBDIRS(
  giplconvert
  histogramequalizeimage
  imagecompare
- imagetovectorimage
+ imagestovectorimage
  intensityreplace
  intensitywindowing
  invertintensityimagefilter
